--- a/angular.json
+++ b/angular.json
@@ -26,7 +26,8 @@
             "assets": [
               { "glob": "**/*", "input": "public" },
               "src/favicon.ico",
-              "src/assets"
+              "src/assets",
+              "src/manifest.webmanifest"
             ],
             "styles": [
               "@angular/material/prebuilt-themes/azure-blue.css",
@@ -61,7 +62,7 @@
                 {
                   "type": "anyComponentStyle",
                   "maximumWarning": "6kB",
-                  "maximumError": "10kB"    
+                  "maximumError": "10kB"
                 }
                 ]
             },
