--- a/angular.json
+++ b/angular.json
@@ -14,6 +14,7 @@
       "sourceRoot": "src",
       "prefix": "app",
       "architect": {
+
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
@@ -24,11 +25,10 @@
             "tsConfig": "tsconfig.app.json",
             "inlineStyleLanguage": "scss",
             "assets": [
-              { "glob": "**/*", "input": "public" },
+              { "glob": "**/*", "input": "public", "output": "/" },
               "src/favicon.ico",
-              "src/assets",
-              "src/manifest.webmanifest"
-            ],
+              "src/assets"
+            ]
             "styles": [
               "@angular/material/prebuilt-themes/azure-blue.css",
               "src/styles.scss"
