--- a/vercel.json
+++ b/vercel.json
@@ -3,14 +3,40 @@
   "buildCommand": "npm run build",
   "outputDirectory": "dist/market",
   "functions": {},
-  "rewrites": [
+  "routes": [
     {
-      "source": "/assets/(.*)",
-      "destination": "/assets/$1"
+      "src": "/manifest\\.webmanifest",
+      "dest": "/manifest.webmanifest",
+      "headers": {
+        "content-type": "application/manifest+json",
+        "cache-control": "public, max-age=0, must-revalidate"
+      }
     },
     {
-      "source": "/(.*)",
-      "destination": "/index.html"
+      "src": "/ngsw\\.json",
+      "dest": "/ngsw.json",
+      "headers": {
+        "content-type": "application/json",
+        "cache-control": "public, max-age=0, must-revalidate"
+      }
+    },
+    {
+      "src": "/ngsw-worker\\.js",
+      "dest": "/ngsw-worker.js",
+      "headers": {
+        "content-type": "application/javascript",
+        "cache-control": "public, max-age=0, must-revalidate"
+      }
+    },
+    {
+      "src": "/(.*\\.(js|css|ico|png|jpg|jpeg|gif|svg|woff|woff2|ttf|eot))",
+      "headers": {
+        "cache-control": "public, max-age=31536000, immutable"
+      }
+    },
+    {
+      "src": "/.*",
+      "dest": "/index.html"
     }
   ]
 }
