--- a/vercel.json
+++ b/vercel.json
@@ -2,41 +2,41 @@
   "version": 2,
   "buildCommand": "npm run build",
   "outputDirectory": "dist/market",
-  "functions": {},
-  "routes": [
+  "cleanUrls": false,
+  "trailingSlash": false,
+  "headers": [
     {
-      "src": "/manifest\\.webmanifest",
-      "dest": "/manifest.webmanifest",
-      "headers": {
-        "content-type": "application/manifest+json",
-        "cache-control": "public, max-age=0, must-revalidate"
-      }
+      "source": "/(.*)\\.js",
+      "headers": [
+        {
+          "key": "Content-Type",
+          "value": "application/javascript"
+        }
+      ]
     },
     {
-      "src": "/ngsw\\.json",
-      "dest": "/ngsw.json",
-      "headers": {
-        "content-type": "application/json",
-        "cache-control": "public, max-age=0, must-revalidate"
-      }
+      "source": "/(.*)\\.css",
+      "headers": [
+        {
+          "key": "Content-Type",
+          "value": "text/css"
+        }
+      ]
     },
     {
-      "src": "/ngsw-worker\\.js",
-      "dest": "/ngsw-worker.js",
-      "headers": {
-        "content-type": "application/javascript",
-        "cache-control": "public, max-age=0, must-revalidate"
-      }
-    },
+      "source": "/manifest.webmanifest",
+      "headers": [
+        {
+          "key": "Content-Type",
+          "value": "application/manifest+json"
+        }
+      ]
+    }
+  ],
+  "rewrites": [
     {
-      "src": "/(.*\\.(js|css|ico|png|jpg|jpeg|gif|svg|woff|woff2|ttf|eot))",
-      "headers": {
-        "cache-control": "public, max-age=31536000, immutable"
-      }
-    },
-    {
-      "src": "/.*",
-      "dest": "/index.html"
+      "source": "/((?!.*\\.).*)$",
+      "destination": "/index.html"
     }
   ]
 }
