--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,9 @@
-
 {
   "version": 2,
   "buildCommand": "npm run build",
-  "outputDirectory": "dist/market"
+  "outputDirectory": "dist",
+  "framework": "angular",
+  "rewrites": [
+    { "source": "/(.*)", "destination": "/index.html" }
+  ]
 }
