--- a/angular.json
+++ b/angular.json
@@ -32,8 +32,7 @@
                 "output": "/"
               },
               "src/favicon.ico",
-              "src/assets",
-              "src/manifest.webmanifest"
+              "src/assets"
             ],
             "styles": [
               "@angular/material/prebuilt-themes/azure-blue.css",
