--- a/ngsw-config.json
+++ b/ngsw-config.json
@@ -26,5 +26,12 @@
         ]
       }
     }
+  ],
+  "dataGroups": [],
+  "navigationUrls": [
+    "/**",
+    "!/**/*.*",
+    "!/**/*__*",
+    "!/**/*__*/**"
   ]
 }
